# PomodoroXII

./: .gitignore  PhaseC-sync-repair-dispatch.md  PhaseC审计报告.md  README.md  overview.md  pomodoroxii-deep-review-report.md  深度审查报告-独立复核版.md  深度审查报告v2.html  深度审查报告v2.md
backend/: .dockerignore  DEPLOY.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/.codebase-memory/: artifact.json  graph.db.zst
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_sync_indexes.py  003_note_status_check.py  004_task_indexes.py  005_sync_updated_at_indexes.py  006_sync_timestamp_normalize.py  cab2ff7bcf37_phase_b_all_models.py
backend/alembic_meta/: env.py
backend/alembic_meta/versions/: 001_meta_baseline_meta_baseline.py  001_meta_schema.py
backend/alembic_space/: env.py
backend/alembic_space/versions/: 001_space_baseline_space_baseline.py  001_space_schema.py  002_sync_indexes.py  003_note_status_check.py  004_task_indexes.py  005_sync_updated_at_indexes.py  006_sync_timestamp_normalize.py  007_session_mood_check.py  008_sync_retention_snapshot.py
backend/app/: body_size_limit.py  deps.py  errors.py  logging.py  main.py  middleware.py  rate_limit.py  settings.py  space_manager.py
backend/app/auth/: security.py
backend/app/db/: base.py  meta_session.py  metadata.py  migrations.py  session.py
backend/app/file_system/: __init__.py  api.py  backup.py  frontmatter.py  interfaces.py  models.py  schema.py
backend/app/mcp/: __init__.py  server.py
backend/app/models/: __init__.py  folder.py  habit.py  habit_check_in.py  memo_comment.py  mixins.py  note.py  quick_note.py  reflection.py  schedule.py  schedule_quick_note.py  session.py  (+9 more)
backend/scripts/: check_entity_consistency.py  scaffold_entity.py
backend/tests/: conftest.py  parity_helpers.py  test_alembic.py  test_alembic_dual_environments.py  test_auth_security.py  test_backup_lifespan.py  test_base_service.py  test_build_sync_registry.py  test_cascade_service.py  test_db_isolation.py  test_db_session.py  test_deps.py  test_deps_space_validation.py  test_entity_spec_extension.py  test_errors.py  test_frontmatter.py  test_integration.py  test_logging.py  test_main.py  test_mcp_http_lifespan.py  test_mcp_server.py  test_meta_db.py  test_middleware.py  test_migration_runner.py  test_models.py  test_note_constraints.py  test_note_service.py  test_notes_patch_content.py  test_notes_search.py  test_notes_versions.py  test_openapi_contract.py  test_parity_alembic_metadata.py  test_parity_registry_orm.py  test_parity_registry_schemas.py  test_parity_registry_sync.py  test_parity_routes.py  test_parity_stats_mcp.py  test_phase_c_completion.py  test_phase_d_completion.py  test_prod_hardening.py  (+36 more)
(+397 files in other folders)
