[project]
name = "pomodoroxii-backend"
version = "0.1.0"
description = "PomodoroXII backend — FastAPI + SQLAlchemy 2.0 async multi-space rewrite"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "pyjwt>=2.10",
    "bcrypt>=4.2",
    "python-multipart>=0.0.20",
    "filelock>=3.16",
    "nanoid>=2.0.0",
    "python-slugify>=8.0.4",
    "fastmcp>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
